--- a/css/styleGit.css
+++ b/css/styleGit.css
@@ -2,10 +2,19 @@ html{
     background-color: #0d1117;
 }
 th{
+    height: 40px;
     background-color: #484f58;
 }
 table{
+
+    width: 80%;
+    margin: auto;
     border-collapse: collapse;
+    border: #30363d 1px solid;
+    background-color: #bfe3e2;
+
+}
+td{
     border: #30363d 1px solid;
 }
 header{
@@ -14,6 +23,7 @@ header{
     display: flex;
     justify-content: space-between;
     border-bottom: #30363d 1px solid;
+    margin-bottom: 50px;
 }
 .nav-bar{
     width: 80%;
@@ -28,8 +38,10 @@ a:hover{
     color: #484f58;
 }
 #search{
-    background-color: #89a4cc;
+    background-color: #bfe3e2;
+    color: darkgrey;
 }
 ::placeholder{
     color: white
 }
+
