--- a/css/twitter.css
+++ b/css/twitter.css
@@ -21,12 +21,20 @@ header {
     background-size: cover;
     min-height: 300px;
     padding-top: 275px;
+    position: relative;
 }
 a {
     color: var(--link-color);
 }
 .top-nav {
     background: var(--light-bg);
+}
+.profile{
+    height: 80px;
+}
+.profile-image{
+    position: absolute;
+    top: 240px;
 }
 .nav {
     list-style-type: none;
@@ -35,8 +43,7 @@ a {
 }
 .nav-item{
     display: inline-block;
-    margin-right: 9%;
-    margin-left: 9%;
+    padding: 2em;
 }
 .nav-link {
     color: var(--main-link-color);
@@ -49,6 +56,12 @@ a {
 .profile {
     background: var(--light-bg);
 }
+.profile-entry{
+    margin: .5em;
+}
+.profile-items{
+    list-style: none;
+}
 .btn {
     border: 1px solid var(--main-link-color);
     color: var(--main-link-color);
@@ -58,6 +71,7 @@ a {
     border-radius: 5px;
 }
 .btn-large {
+    margin-top: 17px;
     font-size: 1.3em;
     padding: 10px;
 }
@@ -70,4 +84,34 @@ a {
 }
 .text-muted {
     color: var(--main-link-color);
+}
+.profile-details{
+    float: left;
+    width: calc(25% - 1em);
+    margin: .5em;
+}
+.timeline{
+    float: left;
+    width: calc(50% - 1em);;
+    margin: .5em;
+}
+.who-to-follow{
+    float: left;
+    width: calc(25% - 1em);
+    margin: .5em;
+}
+.container{
+    margin-bottom: 2em;
+}
+.media{
+    width: 100%;
+    background-color: var(--light-bg);
+    border-bottom: 1px var(--separator-color) solid;
+    padding: .5em;
+    overflow: auto;
+}
+.media-image{
+    max-width: 50px;
+    margin-top: 1.33em;
+    float: left;
 }
